--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/runtime": "^7.17.2",
+    "@react-three/cannon": "^5.1.0",
+    "@react-three/drei": "^8.19.2",
+    "@react-three/fiber": "^7.0.26",
     "axios": "^0.26.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-macros": "^3.1.0",
@@ -46,7 +49,6 @@
     "sass": "^1.49.8",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
-    "three": "^0.138.3",
     "web-vitals": "^2.1.4",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
