--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/runtime": "^7.17.2",
+    "@svgr/webpack": "^6.2.1",
     "axios": "^0.26.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-macros": "^3.1.0",
