--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/runtime": "^7.17.2",
-    "@svgr/webpack": "^6.2.1",
     "@react-three/cannon": "^5.1.0",
     "@react-three/drei": "^8.19.2",
     "@react-three/fiber": "^7.0.26",
+    "@svgr/webpack": "^6.2.1",
     "axios": "^0.26.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-macros": "^3.1.0",
@@ -44,6 +44,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "image-webpack-loader": "^3.3.1",
+    "jump.js": "^1.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^2.1.3",
