--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/runtime": "^7.17.2",
+    "@emailjs/browser": "^3.6.2",
     "@react-three/cannon": "^5.1.0",
     "@react-three/drei": "^8.19.2",
     "@react-three/fiber": "^7.0.26",
@@ -47,6 +48,7 @@
     "jump.js": "^1.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.34.0",
     "react-scripts": "^2.1.3",
     "sass": "^1.49.8",
     "sass-loader": "^12.6.0",
