--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "dev": "deno run -A --watch=routes/,src/ dev.ts",
+    "dev": "deno run -A --watch=routes/,src/scss dev.ts",
     "start": "deno run -A main.ts"
   },
   "importMap": "./import_map.json",
