refactor(project): New structure base
Add also .git/hooks! :sauropod:

--- a/deno.json
+++ b/deno.json
@@ -1,33 +1,57 @@
 {
-  "tasks": {
-    "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
-    "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run --unstable -A -",
-    "manifest": "deno task cli manifest $(pwd)",
-    "start": "deno run -A --watch=routes/,src/scss dev.ts",
-    "build": "deno run -A dev.ts build",
-    "preview": "deno run -A main.ts",
-    "update": "deno run -A -r https://fresh.deno.dev/update ."
-  },
-  "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" },
-  "imports": {
-    "$fresh/": "https://deno.land/x/fresh@1.6.8/",
-    "preact": "https://esm.sh/preact@10.19.6",
-    "preact/": "https://esm.sh/preact@10.19.6/",
-    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@5.2.4",
-    "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
-    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
-    "react-hook-form": "https://esm.sh/react-hook-form@7.41.3?alias=react:preact/compat&deps=preact@10.11.0",
-    "@emailjs/browser": "https://esm.sh/@emailjs/browser@3.10",
-    "@react-three/fiber": "https://esm.sh/@react-three/fiber@7.0.26?alias=react:preact/compat&deps=preact@10.11.0",
-    "@juggle/resize-observer": "https://esm.sh/@juggle/resize-observer@3.4.0",
-    "sass": "https://deno.land/x/denosass/mod.ts",
-    "tilt-js": "https://esm.sh/vanilla-tilt@1.8.0",
-    "std/path": "https://deno.land/std@0.121.0/path/mod.ts",
-    "tailwindcss": "npm:tailwindcss@3.4.1",
-    "tailwindcss/": "npm:/tailwindcss@3.4.1/",
-    "tailwindcss/plugin": "npm:/tailwindcss@3.4.1/plugin.js",
-    "$std/": "https://deno.land/std@0.216.0/"
-  },
-  "lint": { "rules": { "tags": ["fresh", "recommended"] } },
-  "exclude": ["**/_fresh/*"]
+    "compilerOptions": {
+        "jsx": "react-jsx",
+        "jsxImportSource": "preact"
+    },
+    "exclude": [
+        "**/_fresh/*"
+    ],
+    "fmt": {
+        "exclude": [
+            ".git-hooks/",
+            "static/"
+        ],
+        "include": [
+            "./"
+        ],
+        "indentWidth": 4,
+        "lineWidth": 80,
+        "semiColons": true
+    },
+    "imports": {
+        "$fresh/": "https://deno.land/x/fresh@1.6.8/",
+        "$std/": "https://deno.land/std@0.216.0/",
+        "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
+        "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
+        "preact": "https://esm.sh/preact@10.19.6",
+        "preact/": "https://esm.sh/preact@10.19.6/",
+        "std/path": "https://deno.land/std@0.121.0/path/mod.ts",
+        "tailwindcss": "npm:tailwindcss@3.4.1",
+        "tailwindcss/": "npm:/tailwindcss@3.4.1/",
+        "tailwindcss/plugin": "npm:/tailwindcss@3.4.1/plugin.js"
+    },
+    "lint": {
+        "rules": {
+            "exclude": [
+                "static/fonts/"
+            ],
+            "include": [
+                "./**/*.ts"
+            ],
+            "tags": [
+                "fresh",
+                "recommended"
+            ]
+        }
+    },
+    "tasks": {
+        "build": "deno run -A dev.ts build",
+        "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
+        "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run --unstable -A -",
+        "format": "deno fmt",
+        "manifest": "deno task cli manifest $(pwd)",
+        "preview": "deno run -A main.ts",
+        "start": "deno run -A --watch=routes/,islands/,components/,static/css dev.ts",
+        "update": "deno run -A -r https://fresh.deno.dev/update ."
+    }
 }
