--- a/deno.json
+++ b/deno.json
@@ -16,6 +16,7 @@
         "$std/": "https://deno.land/std@0.216.0/",
         "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
         "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
+        "@splinetool/runtime": "npm:@splinetool/runtime@^1.8.9",
         "preact": "https://esm.sh/preact@10.19.6",
         "preact/": "https://esm.sh/preact@10.19.6/",
         "std/path": "https://deno.land/std@0.121.0/path/mod.ts",
