--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,5 @@
 {
+  "version": "0.1.0-beta.1",
   "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" },
   "exclude": ["**/_fresh/*"],
   "fmt": {
